--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.sharedp {
+    background-color: #f40d30;
+    font-family: Verdana, "DejaVu Sans", sans-serif; 
+}
+
+#second {
+    color: #0000ff;
+    font-size: 36px;
+}
+
+.third {
+    font-size: 24px;
+}
+
+#fourth {
+    background-color: #adff2f;
+    font-size: 24px;
+    font-weight: bold;
+}
